# VoxEngine

./: CMakeLists.txt
engine/core/: CMakeLists.txt  ref_counted.h  ref_counted_impl.inl  serialised_class.h  traits.h
engine/kernel/: CMakeLists.txt  file_io.cpp
engine/platform/: atomics.cpp  atomics.h
engine/renderer/: CMakeLists.txt  device.cpp  device.h  render_object_handle.h  render_object_handle_impl.inl  renderer.cpp  renderer.h
launcher/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_ref_counted.cpp  test_renderer.cpp  test_renderer_handle.cpp  test_serialisation.cpp
